tests/const_param_assign_bad.stderr
tests/const_param_assign_bad.sl:3:2: error: SL2004: type mismatch: assignment target is const
