tests/const_param_assign_bad.sl
// Verifies const parameter assign is rejected.
fn mutate(const n i32) {
	n = 1
}
